# DNASequenceAnalysis

./: Cargo.toml  README.md  TODO.md
.github/workflows/: rust.yml
assets/: SARS-beta.fasta  SARS-delta.fasta  SARS-gamma.fasta  SARS-omicron.fasta  SARS-zeta.fasta
examples/: covid_varaints.rs
src/: aliner.rs  lib.rs  main.rs  mutation_detection.rs  reader.rs
