[package]
name = "dna_sequence_analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bio = "1.4.0"
tabled = "0.14.0"
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.17"
